@@ -1,4 +1,5 @@
 <?php
+
 /**
  * @file
  * Installation and update scripts for the Imagecache Token module.
